<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Keys -->
    <string name="app_name">Scramble Me</string>
    <string name="parse_app_id">5jH2cY9mSveUq96g4a7YRZF7i9XILuY9pd7sSKG9</string>
    <string name="parse_client_key">sI8KkWUCNrjWuU4H2MtJwAfNCRD3i9qMcZpCruKR</string>
    <string name="facebook_app_id">890466197677310</string>
    <string name="twitter_consumer_key">YOUR_TWITTER_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret">YOUR_TWITTER_CONSUMER_SECRET</string>

    <!-- App Strings -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_facebook">Log in with Facebook</string>
    <string name="button_twitter">Log in with Twitter</string>
    <string name="title_activity_main">Scramble Me</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_cancel">Cancel</string>
    <string name="gallery_title">Scrambles</string>
    <string name="text_gallery">Choose From Gallery</string>
    <string name="text_camera">Take a Picture</string>
    <string name="send_to">Send To..</string>
    <string name="button_scramble">Scramble Pic</string>
    <string name="button_descramble">Descramble Pic</string>

    <!-- Menu -->
    <string name="menu_logout">Logout</string>
    <string name="menu_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_facebook_share">Share with facebook</string>
    <string name="action_save">Save</string>


</resources>
