<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.elitetek.scrambleme.MainActivity" >

    <item
        android:id="@+id/delete"
        android:title="@string/menu_delete"/>

    <item
        android:id="@+id/logout"
        android:title="@string/menu_logout"/>

    <item android:id="@+id/save"
        android:icon="@drawable/content_save"
        android:title="@string/action_save"
        android:showAsAction="always" />

    <item android:id="@+id/share"
        android:icon="@drawable/social_send_now"
        android:title="@string/action_share"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/fbshare"
        android:icon="@drawable/facebook_small"
        android:title="@string/action_facebook_share"
        android:showAsAction="always" />
</menu>
